--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -36,7 +36,12 @@ export const RightArrow = () => <svg
 
 <div className="sb-container">
   <div className='sb-section-title'>
-    # Configure your project
+    # Venuerific Landing Page's Storybook
+
+    This is Storybook for the coding test.
+  </div>
+  <div className='sb-section-title'>
+    # About Storybook
 
     Because Storybook works separately from your app, you'll need to configure it for your specific stack and setup. Below, explore guides for configuring Storybook with popular frameworks and tools. If you get stuck, learn how you can ask for help from our community.
   </div>
